--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <main>
-  <h1>Hello World!</h1>
+  <h1>{{ 'GLOBAL.GREETINGS' | translate }}</h1>
   <img src="../assets/images/angular.png">
 </main>
