Add bootstrap css and .idea (webstorm, intellij, etc) to gitignore

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<main>
+<main class="container-fluid">
   <h1>{{ 'GLOBAL.GREETINGS' | translate }}</h1>
   <img src="../assets/images/angular.png">
 </main>
