--- a/src/styles/helpers/_settings.scss
+++ b/src/styles/helpers/_settings.scss
@@ -7,3 +7,7 @@ $html---dp: 30px !default;
 
 // Print class
 $c-print: true !default;
+
+// Body
+$body---background: #0147a7;
+$body---color: #ffffff;
