--- a/src/styles/vendors.config/_egeo.config.scss
+++ b/src/styles/vendors.config/_egeo.config.scss
@@ -1,4 +1,4 @@
 
 $egeo-silent-classes: true;
-$egeo-fontface-src: '../fonts';
+$egeo-fontface-src: 'assets/fonts'; // If you change this, you need to change too in ../../../config/webpack.common.js
 $egeo-sanitize: false;
