--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -1,4 +1,1 @@
-<main>
-  <h1>{{ 'GLOBAL.GREETINGS' | translate }}</h1>
-  <img src="../assets/images/angular.png">
-</main>
+<router-outlet></router-outlet>
