--- a/src/app/modules/layout/layout.template.html
+++ b/src/app/modules/layout/layout.template.html
@@ -1,5 +1,5 @@
 <st-header appName="Egeo Starter" [menu]="menu"
-           qaTag="dg-header"
+           qaTag="st-header"
            (contentChangeOffset)="onContentChangeOffset($event)"
            stHeaderBehavior>
 </st-header>
@@ -8,3 +8,5 @@
       <router-outlet></router-outlet>
    </div>
 </div>
+
+<st-footer [rightsText]="rightsText" [links]="links" [image]="image" qaTag="st-footer"></st-footer>
