--- a/src/app/app.styles.scss
+++ b/src/app/app.styles.scss
@@ -1,5 +1,6 @@
 @import '~egeo-ui-base/utils/typography';
 @import '~egeo-ui-base/vendors/sanitize';
+@import '~egeo-ui-base/utils/grid';
 
 body,
 html {
