--- a/src/app/modules/examples/examples.template.html
+++ b/src/app/modules/examples/examples.template.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
    <div class="row">
       <div class="col-lg-24 col-md-24 col-sm-24 col-xs-24">
-         <st-page-title title="{{ 'GLOBAL.EXAMPLES' | translate }}"></st-page-title>
+         <st-page-title title="{{ 'GLOBAL.EXAMPLES' | translate }}" qaTag="title"></st-page-title>
       </div>
    </div>
    <br />
