--- a/src/app/modules/layout/layout.template.html
+++ b/src/app/modules/layout/layout.template.html
@@ -17,7 +17,7 @@
 -->
 
 <div class="main">
-   <!--<st-header appName="Egeo Starter"
+   <st-header appName="Egeo Starter"
               [menu]="menu"
               qaTag="st-header"
               (contentChangeOffset)="onContentChangeOffset($event)"
@@ -28,5 +28,5 @@
          <router-outlet></router-outlet>
       </div>
    </div>
-   <st-footer [rightsText]="rightsText" [links]="links" [image]="image" qaTag="st-footer"></st-footer>-->
+   <st-footer [rightsText]="rightsText" [links]="links" qaTag="st-footer"></st-footer>
 </div>
